--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
 	//snakeTexture.src = 'snake.png'; var grassTexture = new Image();
 	snakeTexture.src = 'BodyRed.gif'; 
 	var RedBodyTexture = new Image();
+	grassTexture.src = 'grass.png'; 
 	var mouseTexture = new Image();
 	var snakeHeadTexture = new Image();
 	headTexture.src = "HeadTexture.png";
